# MSR-ReHLDS

./: .gitignore  CMakeLists.txt  ReHLDS.sln  build-linux.sh  createall.sh
.github/workflows/: pr.yml  release.yml
src/: CMakeLists.txt
src/common/: TextConsoleWin32.cpp  commandline.cpp  textconsole.cpp
src/dedicated/: CMakeLists.txt
src/dedicated/msvc/: dedicated.vcxproj
src/dedicated/src/: precompiled.h
src/engine/: cmd.cpp  common.cpp  common.h  cvar.cpp  delta_packet.h  host.cpp  host.h  host_cmd.cpp  info.cpp  model.cpp  net.h  net_chan.cpp  net_ws.cpp  pmove.cpp  pmove.h  pr_cmds.cpp  server.h  sv_main.cpp  sv_phys.cpp  sv_steam3.cpp  sv_upld.cpp  sv_user.cpp  sys_dll.cpp  unicode_strtools.cpp  usermsg.h  world.cpp
src/filesystem/: CMakeLists.txt
src/filesystem/FileSystem_Stdio/: CMakeLists.txt
src/filesystem/FileSystem_Stdio/msvc/: filesystem_stdio.vcxproj
src/msvc/: ReHLDS.vcxproj
src/public/: interface.h  registry.cpp
src/rehlds/: CMakeLists.txt  hookchains_impl.cpp  hookchains_impl.h  main.cpp  platform.cpp  precompiled.h  rehlds_api_impl.cpp  rehlds_api_impl.h  rehlds_interfaces_impl.cpp  rehlds_interfaces_impl.h  structSizeCheck.cpp
src/version/: appversion.bat  appversion.h
utils/bzip2/: CMakeLists.txt
utils/bzip2/msvc/: bzip2.vcxproj
version/: appversion.h
